adding create view for create a job post and show after created that post

--- a/backend/templates/jobs/detail.html
+++ b/backend/templates/jobs/detail.html
@@ -37,7 +37,7 @@
                     <td colspan="2">{{job.location}}</td>
                 </tr>
                 <tr>
-                    <th scope="row">Data Published</th>
+                    <th scope="row">Date Published</th>
                     <td colspan="2">{{job.date_posted}}</td>
                 </tr>
             </tbody>
